Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/Laptop_Request__c.object-meta.xml
<CustomObject>
    <label>Laptop Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Laptop Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laptop Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>