Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApprovalStatus</label>
    <type>Checkbox</type>
</CustomField>