Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Laptop_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Accessories__c</fullName>
    <label>Laptop Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Laptop_Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headphone</fullName>
            </value>
            <value>
                <fullName>Keyboard Protector</fullName>
            </value>
            <value>
                <fullName>Laptop Case</fullName>
            </value>
            <value>
                <fullName>Laptop Cooling mat</fullName>
            </value>
            <value>
                <fullName>USB Reading Lamp</fullName>
            </value>
            <value>
                <fullName>Wireless Mouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>