Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Laptop_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laptop Manufacturer</label>
    <referenceTo>Laptop_Details__c</referenceTo>
    <relationshipLabel>Laptop Requests</relationshipLabel>
    <relationshipName>Laptop_Requests_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>