Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Laptop_Model__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Model__c</fullName>
    <inlineHelpText>Please select the Laptop model you require</inlineHelpText>
    <label>Laptop Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell Precision 3560</fullName>
            </value>
            <value>
                <fullName>HP 6470b ProBook</fullName>
            </value>
            <value>
                <fullName>Apple MacBook Air</fullName>
            </value>
            <value>
                <fullName>Lenovo Thinkpad Twist S230U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>