Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Reason_for_returing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_returing__c</fullName>
    <label>Reason for returing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>