Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Report_Field__c.field-meta.xml
<CustomField>
    <fullName>Report_Field__c</fullName>
    <formula>TODAY()- LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>