Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>Laptop_Details__c</referenceTo>
    <relationshipLabel>Laptop Requests (Serial Number)</relationshipLabel>
    <relationshipName>Laptop_Requests_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>