Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/fields/Software_Require__c.field-meta.xml
<CustomField>
    <fullName>Software_Require__c</fullName>
    <label>Software Require</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Rest Client</fullName>
            </value>
            <value>
                <fullName>Git Hub</fullName>
            </value>
            <value>
                <fullName>Notepad++</fullName>
            </value>
            <value>
                <fullName>SFDX CLI</fullName>
            </value>
            <value>
                <fullName>Visual Studio Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>