Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/listViews/Requests.listView-meta.xml
<ListView>
    <fullName>Requests</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>Requests</label>
</ListView>