Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Request__c/listViews/Requests1.listView-meta.xml
<ListView>
    <fullName>Requests1</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Requests</label>
</ListView>